--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="main.css">
-<script defer src="main.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script defer src="main.js"></script>
     <title>Laboration 1</title>
 </head>
+
 <body>
-    
+    <h1></h1>
+    <button>Change user</button>
 </body>
 </html>
