add some reusable styles and color

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Laboration 1</title>
 </head>
 
-<body>
+<body class="page-1 full-height">
+    <div class="flex column align-center">
     <h1></h1>
-    <button>Change user</button>
+    <button class="flex align-center">Change user</button>
+    </div>
 </body>
 </html>
