--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page-1 full-height">
     <div class="flex column align-center">
     <h1></h1>
-    <button class="flex align-center">Change user</button>
+    <button>Change user</button>
     </div>
 </body>
 </html>
