wrote README file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 <body class="page-1 full-height">
     <div class="flex column align-center">
-    <h1></h1>
-    <button>Change user</button>
+        <h1></h1>
+        <button>Change username</button>
+    </div>
+
+    <div class="flex column aling-center">
+       <a href="page-2.html"><button>Start</button></a>
     </div>
 </body>
 </html>
