add html files for all rooms

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Laboration 1</title>
 </head>
 
-<body class="page-1 full-height">
+<body class="background-color">
     <div class="flex column align-center">
         <h1></h1>
         <button>Change username</button>
