--- a/page-2.html
+++ b/page-2.html
@@ -8,7 +8,13 @@
 <script defer src="page-2.js"></script>
     <title>Laboration 1</title>
 </head>
-<body>
+<body class="background-color">
+    <div>
+        <button>Bedroom</button>
+        <button>Bathroom</button>
+        <button>Kitchen</button>
+        <button>Living room</button>
+    </div>
     
 </body>
 </html>
