add nav with back to

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Laboration 1</title>
 </head>
 
-<body class="background-color">
+<body>
     <div class="flex column align-center">
         <h1></h1>
         <button>Change username</button>
     </div>
 
     <div class="flex column aling-center">
-       <a href="page-2.html"><button>Start</button></a>
+       <a href="Apartment.html"><button>Start</button></a>
     </div>
 </body>
 </html>
