--- a/Apartment.html
+++ b/Apartment.html
@@ -6,15 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="main.css">
 <script defer src="page-2.js"></script>
-    <title>Laboration 1</title>
+    <title>Apartment overview</title>
 </head>
-<body class="background-color">
+<body>
+    <nav>
+        <a href="index.html">Back to beginning</a>
+    </nav>
     <div>
         <button>Bedroom</button>
+    </div>
+    <div class="flex space-evenly">
         <button>Bathroom</button>
+        <h1>Apartment</h1>
         <button>Kitchen</button>
+    </div>
+    <div>
         <button>Living room</button>
     </div>
+    
     
 </body>
 </html>
