add fontawesome icons

--- a/Apartment.html
+++ b/Apartment.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="main.css">
+<script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
 <script defer src="page-2.js"></script>
     <title>Apartment overview</title>
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to beginning</a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i>Back to beginning</a>
     </nav>
-    <div>
-        <button>Bedroom</button>
+    <div class="flex column align-center">
+        <a href="bedroom.html"><button> Bedroom</button></a>
     </div>
     <div class="flex space-evenly">
-        <button>Bathroom</button>
+        <a href="bathroom.html"><button>Bathroom</button></a>
         <h1>Apartment</h1>
-        <button>Kitchen</button>
+        <a href="kitchen.html"><button>Kitchen</button></a>
     </div>
-    <div>
-        <button>Living room</button>
+    <div class="flex column align-center">
+        <a href="livingroom.html"><button>Living room</button></a>
     </div>
     
     
