--- a/bedroom.html
+++ b/bedroom.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="main.css">
+<script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
 <script defer src=""></script>
     <title>Bedroom</title>
 </head>
 <body>
     <nav>
-        <a href="Apartment.html">Back to Apartment</a>
+        <a href="Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
    
     
