add folders and relink

--- a/HTML/Apartment.html
+++ b/HTML/Apartment.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src="page-2.js"></script>
+<script defer src="/JavaScript/apartment.js"></script>
     <title>Apartment overview</title>
 </head>
 <body>
     <nav>
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i>Back to beginning</a>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i>Back to beginning</a>
     </nav>
     <div class="flex column align-center">
-        <a href="bedroom.html"><button> Bedroom</button></a>
+        <a href="./bedroom.html"><button> Bedroom</button></a>
     </div>
     <div class="flex space-evenly">
-        <a href="bathroom.html"><button>Bathroom</button></a>
+        <a href="./bathroom.html"><button>Bathroom</button></a>
         <h1>Apartment</h1>
-        <a href="kitchen.html"><button>Kitchen</button></a>
+        <a href="./kitchen.html"><button>Kitchen</button></a>
     </div>
     <div class="flex column align-center">
-        <a href="livingroom.html"><button>Living room</button></a>
+        <a href="./livingroom.html"><button>Living room</button></a>
     </div>
     
     
