--- a/HTML/bathroom.html
+++ b/HTML/bathroom.html
@@ -11,8 +11,11 @@
 </head>
 <body>
     <nav>
-        <a href="Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
+        <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
+    <div>
+        <h1>Bathroom</h1>
+    </div>
    
     
 </body>
