--- a/HTML/bedroom.html
+++ b/HTML/bedroom.html
@@ -11,8 +11,14 @@
 </head>
 <body>
     <nav>
-        <a href="Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
+        <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
+    <div class="flex column align-center">
+        <h1>Bedroom</h1>
+        <p>
+            You go into your bedroom. You haven't made the bed, but the cat isn't under the covers. It also isn't under the bed, or 
+        </p>
+    </div>
    
     
 </body>
