--- a/HTML/livingroom.html
+++ b/HTML/livingroom.html
@@ -7,12 +7,15 @@
 <link rel="stylesheet" href="main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
 <script defer src=""></script>
-    <title>Kitchen</title>
+    <title>Living room</title>
 </head>
 <body>
     <nav>
-        <a href="Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
+        <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
+    <div>
+        <h1>Living room</h1>
+    </div>
    
     
 </body>
