--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <script defer src="main.js"></script>
+    <script defer src="/JavaScript/main.js"></script>
     <title>Laboration 1</title>
 </head>
 
@@ -16,7 +16,7 @@
     </div>
 
     <div class="flex column aling-center">
-       <a href="Apartment.html"><button>Start</button></a>
+       <a href="./Apartment.html"><button>Start</button></a>
     </div>
 </body>
 </html>
