relinked correctly with ../

--- a/HTML/bedroom.html
+++ b/HTML/bedroom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
 <script defer src=""></script>
     <title>Bedroom</title>
@@ -16,7 +16,7 @@
     <div class="flex column align-center">
         <h1>Bedroom</h1>
         <p>
-            You go into your bedroom. You haven't made the bed, but the cat isn't under the covers. It also isn't under the bed, or 
+            You go into your bedroom. You haven't made the bed, but the cat isn't under the covers. It also isn't under the bed. You wonder if you may have accidentally locked it in the closet when you were getting dressed in the morning.
         </p>
     </div>
    
