--- a/HTML/Apartment.html
+++ b/HTML/Apartment.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src="/JavaScript/apartment.js"></script>
+<script defer src="../JavaScript/apartment.js"></script>
     <title>Apartment overview</title>
 </head>
 <body>
