add text to all rooms

--- a/HTML/kitchen.html
+++ b/HTML/kitchen.html
@@ -13,8 +13,11 @@
     <nav>
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
-    <div>
+    <div class="flex column align-center">
         <h1>Kitchen</h1>
+        <p>
+            The cat isn't on top of any of the cabinets or under the table or on a cushioned seat. Maybe it's in that cardboard box in the corner?
+        </p>
     </div>
    
     
