--- a/HTML/livingroom.html
+++ b/HTML/livingroom.html
@@ -13,8 +13,11 @@
     <nav>
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
-    <div>
+    <div class="flex column align-center">
         <h1>Living room</h1>
+        <p>
+            The cat isn't on the couch or in the bookcase. Maybe it's under the blanket in the cat bed on the side of the radiator?
+        </p>
     </div>
    
     
