--- a/HTML/bathroom.html
+++ b/HTML/bathroom.html
@@ -13,8 +13,11 @@
     <nav>
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
-    <div>
+    <div class="flex column align-center">
         <h1>Bathroom</h1>
+        <p>
+            The cat isn't in the shower, but maybe it's in the litterbox? Seems like a place a cat could be.
+        </p>
     </div>
    
     
