--- a/HTML/bedroom.html
+++ b/HTML/bedroom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src=""></script>
+<script defer src="../JavaScript/bedroom.js"></script>
     <title>Bedroom</title>
 </head>
 <body>
@@ -18,6 +18,7 @@
         <p>
             You go into your bedroom. You haven't made the bed, but the cat isn't under the covers. It also isn't under the bed. You wonder if you may have accidentally locked it in the closet when you were getting dressed in the morning.
         </p>
+        <img id="closet-closed" src="" alt="a closed closet">
     </div>
    
     
