add js to bedroom

--- a/HTML/bedroom.html
+++ b/HTML/bedroom.html
@@ -15,10 +15,11 @@
     </nav>
     <div class="flex column align-center">
         <h1>Bedroom</h1>
-        <p>
-            You go into your bedroom. You haven't made the bed, but the cat isn't under the covers. It also isn't under the bed. You wonder if you may have accidentally locked it in the closet when you were getting dressed in the morning.
-        </p>
-        <img id="closet-closed" src="" alt="a closed closet">
+    </div>
+    <div class="flex space-evenly">
+        <button id="bed">Check under bed</button>
+        <button id="covers">Check under the covers</button>
+        <button id="closet">Check inside closet</button>
     </div>
    
     
