--- a/HTML/bathroom.html
+++ b/HTML/bathroom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src=""></script>
+<script defer src="../JavaScript/bathroom.js"></script>
     <title>Bathroom</title>
 </head>
 <body>
@@ -15,9 +15,11 @@
     </nav>
     <div class="flex column align-center">
         <h1>Bathroom</h1>
-        <p>
-            The cat isn't in the shower, but maybe it's in the litterbox? Seems like a place a cat could be.
-        </p>
+    </div>
+    <div class="flex space-evenly">
+        <button id="shower">Check shower</button>
+        <button id="litterbox">Check litterbox</button>
+        <button id="laundry">Check laundry hamper</button>
     </div>
    
     
