kitchen js, not done

--- a/HTML/kitchen.html
+++ b/HTML/kitchen.html
@@ -15,11 +15,12 @@
     </nav>
     <div class="flex column align-center">
         <h1>Kitchen</h1>
-        <p>
-            The cat isn't on top of any of the cabinets or under the table or on a cushioned seat. Maybe it's in that cardboard box in the corner?
-        </p>
     </div>
-   
+    <div class="flex space-evenly">
+        <button id="cabinets">Check on top of cabinets</button>
+        <button id="chair">Check chair with cushion</button>
+        <button id="box">Check cardboard box</button>
+    </div>
     
 </body>
 </html>
