--- a/HTML/kitchen.html
+++ b/HTML/kitchen.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src=""></script>
+<script defer src="../JavaScript/kitchen.js"></script>
     <title>Kitchen</title>
 </head>
 <body>
