--- a/HTML/livingroom.html
+++ b/HTML/livingroom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../main.css">
 <script src="https://kit.fontawesome.com/965aa857ab.js" crossorigin="anonymous"></script>
-<script defer src=""></script>
+<script defer src="../JavaScript/livingroom.js"></script>
     <title>Living room</title>
 </head>
 <body>
@@ -15,11 +15,12 @@
     </nav>
     <div class="flex column align-center">
         <h1>Living room</h1>
-        <p>
-            The cat isn't on the couch or in the bookcase. Maybe it's under the blanket in the cat bed on the side of the radiator?
-        </p>
     </div>
-   
+    <div class="flex space-evenly">
+        <button id="couch">Check the couch</button>
+        <button id="bookcase">Check the bookcase</button>
+        <button id="tv">Check behind the TV</button>
+    </div>
     
 </body>
 </html>
