change typo and readme

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
         <button>Change username</button>
     </div>
 
-    <div class="flex column aling-center">
+    <div class="flex column align-center m-4">
        <a href="./Apartment.html"><button>Start</button></a>
     </div>
 </body>
