relinked back to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="flex column align-center m-4">
-       <a href="./Apartment.html"><button>Start</button></a>
+       <a href="./HTML/Apartment.html"><button>Start</button></a>
     </div>
 </body>
 </html>
