--- a/HTML/Apartment.html
+++ b/HTML/Apartment.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i>Back to beginning</a>
+        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i>Back to beginning</a>
     </nav>
     <div class="flex column align-center">
         <a href="./bedroom.html"><button> Bedroom</button></a>
