--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="../main.css">
+    <script defer src="../JavaScript/main.js"></script>
     <title>Laboration 1</title>
 </head>
 
 <body>
+    <div class="flex column align-center">
+        <h1></h1>
+        <button>Change username</button>
+    </div>
     <div class="flex column align-center m-4">
-        <h1>Gone, kitty, gone</h1>
-       <a href="./HTML/intro.html"><button>Start</button></a>
+       <a href="./Apartment.html"><button>Enter apartment</button></a>
     </div>
 </body>
 </html>
