add comments in js and HTML

--- a/HTML/Apartment.html
+++ b/HTML/Apartment.html
@@ -10,9 +10,12 @@
     <title>Apartment overview</title>
 </head>
 <body>
+      <!--Navbar with back button-->
     <nav>
         <a href="../HTML/intro.html"><i class="fa-solid fa-arrow-left"></i>Back</a>
     </nav>
+
+    <!--buttons that lead to different pages/rooms-->
     <div class="flex column align-center">
         <a href="./bedroom.html"><button> Bedroom</button></a>
     </div>
