--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="flex column align-center">
+    <!--Change username or press enter apartment to go to the next page-->
+    <div class="flex column align-center m-4">
         <h1></h1>
         <button>Change username</button>
     </div>
