--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!--Title and start button-->
     <div class="flex column align-center m-4">
         <h1>Gone, kitty, gone</h1>
        <a href="./HTML/intro.html"><button>Start</button></a>
