--- a/HTML/bathroom.html
+++ b/HTML/bathroom.html
@@ -10,9 +10,12 @@
     <title>Bathroom</title>
 </head>
 <body>
+      <!--Navbar with back button-->
     <nav>
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
+
+    <!--Buttons, when clicked gives more information through JavaScript-->
     <div class="flex column align-center">
         <h1>Bathroom</h1>
     </div>
