--- a/HTML/Apartment.html
+++ b/HTML/Apartment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,22 +9,22 @@
 <script defer src="../JavaScript/apartment.js"></script>
     <title>Apartment overview</title>
 </head>
-<body>
+<body class="flex column center full-height">
       <!--Navbar with back button-->
-    <nav>
+    <nav class="nav-position">
         <a href="../HTML/intro.html"><i class="fa-solid fa-arrow-left"></i>Back</a>
     </nav>
 
     <!--buttons that lead to different pages/rooms-->
-    <div class="flex column align-center">
+    <div class="gap">
         <a href="./bedroom.html"><button> Bedroom</button></a>
     </div>
-    <div class="flex space-evenly">
+    <div class="flex space-evenly gap">
         <a href="./bathroom.html"><button>Bathroom</button></a>
         <h1>Apartment</h1>
         <a href="./kitchen.html"><button>Kitchen</button></a>
     </div>
-    <div class="flex column align-center">
+    <div class="gap">
         <a href="./livingroom.html"><button>Living room</button></a>
     </div>
     
