--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,16 @@
     <title>Laboration 1</title>
 </head>
 
-<body>
+<body class="flex column center full-height">
     <!--Change username or press enter apartment to go to the next page-->
-    <div class="flex column align-center m-4">
+    <div>
         <h1></h1>
-        <button>Change username</button>
     </div>
-    <div class="flex column align-center m-4">
-       <a href="./Apartment.html"><button>Enter apartment</button></a>
+    <div class="flex space-evenly gap">
+        <button>Change username</button>
+        <a href="./Apartment.html">
+            <button>Enter apartment</button>
+        </a>
     </div>
 </body>
 </html>
