--- a/HTML/livingroom.html
+++ b/HTML/livingroom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +9,17 @@
 <script defer src="../JavaScript/livingroom.js"></script>
     <title>Living room</title>
 </head>
-<body>
+<body class="flex column center full-height">
     <!--Navbar with back button-->
-    <nav>
+    <nav class="nav-position">
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
 
     <!--Buttons, when clicked gives more information through JavaScript-->
-    <div class="flex column align-center">
+    <div>
         <h1>Living room</h1>
     </div>
-    <div class="flex space-evenly">
+    <div class="flex space-evenly gap">
         <button id="couch">Check the couch</button>
         <button id="bookcase">Check the bookcase</button>
         <button id="tv">Check behind the TV</button>
