--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +8,9 @@
     <title>Laboration 1</title>
 </head>
 
-<body>
+<body class="flex column full-height center">
     <!--Title and start button-->
-    <div class="flex column align-center m-4">
+    <div class="flex column center m-4">
         <h1>Gone, kitty, gone</h1>
        <a href="./HTML/intro.html"><button>Start</button></a>
     </div>
