--- a/HTML/bedroom.html
+++ b/HTML/bedroom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +9,17 @@
 <script defer src="../JavaScript/bedroom.js"></script>
     <title>Bedroom</title>
 </head>
-<body>
+<body class="flex column center full-height">
       <!--Navbar with back button-->
-    <nav>
+    <nav class="nav-position">
         <a href="./Apartment.html"><i class="fa-solid fa-arrow-left"></i>Back to Apartment</a>
     </nav>
 
     <!--Buttons, when clicked gives more information through JavaScript-->
-    <div class="flex column align-center">
+    <div>
         <h1>Bedroom</h1>
     </div>
-    <div class="flex space-evenly">
+    <div class="flex space-evenly gap">
         <button id="bed">Check under bed</button>
         <button id="covers">Check under the covers</button>
         <button id="closet">Check inside closet</button>
